# bitmind-subnet

./: .dockerignore  .env.encoder_miner.template  .env.gen_miner.template  .env.miner.template  .env.validator.template  .git-blame-ignore-revs  .gitignore  .gitmodules  Dockerfile  IMPROVEMENT_PLAN.md  LICENSE  README.md  VERSION  api.ipynb  autoupdate_miner_steps.sh  autoupdate_validator_steps.sh  create_video_dataset_example.sh  datasets.json  docker-compose.yml  download_data.py  gen_miner.config.js  install.sh  install_system_deps.sh  min_compute.yml  pyproject.toml  requirements-git.txt  requirements-miner.txt  requirements-validator.txt  requirements.txt  run_miner_autoupdate.py  run_neuron.py  run_validator_autoupdate.py  self_heal.py  setup.py  setup.sh  setup_env.sh  setup_miner_env.sh  setup_validator_env.sh  start_mainnet_miner.sh  start_mainnet_validator.sh  (+9 more)
.github/workflows/: ci.yml
base_miner/: README.md  __init__.py  config.py  constants.py  dataset_utils.py  deepfake_detector.py  eval_detector.ipynb  npr_detector.py  object_detection_experiments.ipynb  registry.py  test_ucf_detector.py  train_detector.ipynb  train_detector.py
base_miner/DFB/: train_detector.py
base_miner/NPR/: eval_detector.ipynb  train_detector.ipynb  train_detector.py  validate.py  visualize_filters.ipynb
base_miner/UCF/: README.md  ddp_train.sh  pretrained_ucf.py  stop_dpp_train.sh  test_pretrained_ucf.py  test_ucf.py  train_detector.py  train_ucf.py  ucf_face_detection.py
base_miner/datasets/: base_dataset.py  create_video_dataset.py  download_data.py  image_dataset.py  real_fake_dataset.py  util.py  video_dataset.py
base_miner/deepfake_detectors/: __init__.py  camo_detector.py  deepfake_detector.py  detector_registry.py  npr_detector.py  tall_detector.py  ucf_detector.py
base_miner/gating_mechanisms/: __init__.py  face_gate.py  face_utils.py  gate.py  gating_mechanism.py
base_miner/networks/: trainer.py
base_miner/util/: data.py
bitmind/: .gitignore  BLIP-2_real_image2text_annotation.ipynb  __init__.py  autoupdater.py  config.py  constants.py  download_data.py  encoding.py  epistula.py  git_diff.txt  git_diff_to_file.py  image_dataset.py  image_transforms.py  metagraph.py  protocol.py  random_image_generator.py  real_fake_dataset.py  resolutions.py  transforms.py  types.py  utils.py  wandb_utils.py
bitmind/api/: get_query_axons.py
bitmind/base/: bm_dendrite.py  miner.py  neuron.py  validator.py
bitmind/cache/: __init__.py  cache_fs.py  cache_system.py
bitmind/dataset/: __init__.py  base_dataset.py  image_dataset.py  real_fake_dataset.py  video_dataset.py
bitmind/dataset_processing/: generate_training_dataset.py  load_split_data.py
bitmind/generation/: generation_pipeline.py  model_registry.py  models.py  prompt_generator.py
bitmind/miner/: predict.py
bitmind/scoring/: __init__.py  eval_engine.py  miner_history.py
bitmind/scraping/: __init__.py  base.py  google.py  scraper.py
bitmind/synthetic_data_generation/: README.md  __init__.py  __init__.py~  generate_synthetic_image_dataset.py  image_annotation_generator.py  image_utils.py  in_painting_generator.py  prompt_generator.py  prompt_utils.py  run_dataset_gen.sh  synthetic_data_generator.py  test_in_painting.py
bitmind/synthetic_image_generation/: 1_real_image_to_text_annotation.ipynb  README.md  __init__.py  combine_datasets.py  generate_synthetic_dataset.ipynb  generate_synthetic_dataset.py  image_annotation_generator.py  image_dataset_evaluation.ipynb  inpainting_image_generator.py  multiprocessing_tasks.py  real_image_to_text_annotation.ipynb  run_dataset_generation.sh  stress_test.py  synthetic_data_generator.py  synthetic_dataset_evaluation.ipynb  synthetic_image_generator.py  test_image_annotation.py  text_annotation_to_synthetic_image.ipynb
bitmind/utils/: config.py  data.py  hf_utils.py  image_transforms.py  logging.py  miner_metrics.py  mock.py  uids.py  video_utils.py
bitmind/validator/: __init__.py  challenge.py  config.py  forward.py  miner_performance_tracker.py  model_utils.py  multi_image_reward.py  proxy.py  reward.py  run_data_generator.py  verify_models.py  video_cache.py  video_datasets.py  video_utils.py
docker/: autoupdate.sh  entrypoint.sh  supervisord.conf
docs/: Code_of_Conduct.md  Contributor_Guide.md  Datasets.md  Discriminative-Mining.md  Generative-Mining.md  Glossary.md  Incentive.md  Installation.md  Mining.md  ONNX.md  RELEASE-NOTES-4.4.0-4.4.7.md  Roadmap.md  Setup.md  Validating-New.md  Validating.md
gas/: __init__.py  cli.py  config.py  types.py
gas/artifacts/: __init__.py  processor.py  r2_transport.py
gas/cache/: __init__.py  content_db.py  content_manager.py  media_storage.py  types.py
gas/datasets/: __init__.py  dataset_registry.py  datasets.py  datasets.yaml  download.py
gas/evaluation/: __init__.py  artifact_task_manager.py  artifact_verifier.py  discriminator_tracker.py  generative_challenge_manager.py  miner_type_tracker.py  prompt_server.py  resolution_tiers.py  rewards.py  verification_pipeline.py
gas/generation/: __init__.py  generation_pipeline.py  model_prompt_styles.py  model_registry.py  models.py  prompt_generator.py  prompt_modifiers.py
gas/protocol/: __init__.py  encoding.py  epistula.py  gas_api_validator.py  (+4 more)
neurons/: CAHMoE.py  CAMO.py  README.md  base.py  bm_ucf_miner.py  camo_detect.py  camo_miner.py  context_aware_miner.py  context_aware_v2_miner.py  generator.py  miner.py  miner_performance_benchmark.py  minimal_dendrite.py  multimodal_miner.py  npr_miner.py  proxy.py  ucf_bitmind_miner.py  ucf_miner.py  validator.py  validator_proxy.py
scripts/: prompt_diversity_report.py
static/: subnet_arch_dark.png:Zone.Identifier
tests/: test_cache_types.py  test_challenge_outcomes.py  test_diversity_thresholds.py  test_duplicate_detection.py  test_encoder_incentives.py  test_forward.py  test_image_transforms.py  test_mock.py  test_prompt_generator_spec.py  test_prompt_qc.py  test_prompt_store_dedup.py  test_prompt_store_spec.py  test_register_sampler.py  test_rewards.py  test_scene_remix.py  test_types.py  test_utils.py
(+370 files in other folders)
