[build-system]
requires = ["setuptools>=78.1.1", "wheel", "pip>=21.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gas"
dynamic = ["version"]
description = "SN34 on bittensor"
authors = [{ name = "GAS", email = "intern@bitmind.ai" }]
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "" }
urls = { homepage = "http://bitmind.ai" }

dependencies = [
    "bittensor==10.3.1",
    "bittensor-cli==9.21.1",
    "pillow==12.2.0",
    "substrate-interface==1.7.11",
    "numpy==2.0.1",
    "pandas==2.3.0",
    "torch==2.11.0",
    "torchvision==0.26.0",
    #"flash-attn>=2.7.0",
    "asyncpg==0.30.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "pyarrow==19.0.1",
    "ffmpeg-python==0.2.0",
    "imageio-ffmpeg==0.6.0",
    "bitsandbytes==0.45.4",
    "black==26.3.1",
    "pre-commit==4.2.0",
    "diffusers==0.38.0",
    "transformers==5.8.0",  # >=4.57 required for Qwen3-VL support
    "qwen-vl-utils>=0.0.14",
    "scikit-learn==1.7.1",
    "av==14.2.0",
    "opencv-python==4.11.0.86",
    "wandb==0.19.9",
    "uvicorn==0.46.0",
    "httptools>=0.6.0",
    "fastapi==0.136.1",
    "python-multipart==0.0.27",
    "peft==0.17.0",
    "aiohttp>=3.10.2",
    "onnx==1.21.0",
    "sympy==1.14.0",
    "coloredlogs==15.0.1",
    "flatbuffers==25.2.10",
    "humanfriendly==10.0",
    "hf_xet>=1.3.0",
    "nest-asyncio==1.6.0",
    "python-dotenv==1.2.2",
    "accelerate==1.8.1",
    "selenium==4.43.0",
    "stamina==25.1.0",
    "click>=8.0.0",
    "datasets==4.0.0",
    "async-substrate-interface>=1.5.1",
    "ftfy==6.3.1",
    "huggingface_hub>=0.17.0",
    "gasbench[gpu] @ git+https://github.com/BitMind-AI/gasbench.git@v0.6.5",
    "imagehash>=4.3.1",
    "c2pa-python>=0.29.0",
    "runwayml>=4.13.0",
    "cryptography>=46.0.7",
    "ecdsa>=0.19.2",
    "gitpython>=3.1.50",
    "h11>=0.16.0",
    "protobuf>=5.29.6",
    "pygments>=2.20.0",
    "pytest>=9.0.3",
    "setuptools>=78.1.1",
    "urllib3==2.7.0",
]

[project.scripts]
gascli = "gas.cli:cli"

[tool.setuptools]
packages = { find = { where = [
    ".",
], exclude = [
    "docs*",
    "wandb*",
    "*.egg-info",
] } }

[tool.setuptools.dynamic]
version = { file = "VERSION" }
