[build-system]
requires = ["setuptools>=69.0", "wheel", "pip>=21.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gas"
dynamic = ["version"]
description = "SN34 on bittensor"
authors = [{ name = "GAS", email = "intern@bitmind.ai" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "" }
urls = { homepage = "http://bitmind.ai" }

dependencies = [
    "bittensor==9.9.0",
    "bittensor-cli==9.13.1",
    "pillow==12.2.0",
    "substrate-interface==1.7.11",
    "numpy==2.0.1",
    "pandas==2.3.0",
    "torch==2.7.1",
    "torchvision==0.22.1",
    #"flash-attn>=2.7.0",
    "httpcore==1.0.9",  # >=1.0.9 required for h11 0.16 (CVE: malformed chunked-encoding)
    "httpx==0.28.1",
    "pyarrow==23.0.1",
    "ffmpeg-python==0.2.0",
    "imageio-ffmpeg==0.6.0",
    "bitsandbytes==0.45.4",
    "diffusers==0.38.0",
    "transformers==4.57.6",  # >=4.57 required for Qwen3-VL support
    "qwen-vl-utils>=0.0.14",
    "av==14.2.0",
    "opencv-python==4.11.0.86",
    "wandb==0.19.9",
    "uvicorn==0.27.1",
    "httptools>=0.6.0",
    "peft==0.17.0",
    "aiohttp>=3.10.2",
    "hf_xet==1.1.7",
    "python-dotenv==1.2.2",
    "accelerate==1.8.1",
    "click>=8.0.0",
    "datasets==4.0.0",
    "async-substrate-interface>=1.5.1",
    "ftfy==6.3.1",
    "huggingface_hub>=0.17.0",
    "gasbench[gpu] @ git+https://github.com/BitMind-AI/gasbench.git@v0.6.5",
    "imagehash>=4.3.1",
    "c2pa-python>=0.29.0",
    "runwayml>=4.13.0",
]

[project.scripts]
gascli = "gas.cli:cli"

[tool.uv]
# torchaudio wheels declare no torch dependency, so the resolver can't see
# that its version must match torch — without this constraint,
# `uv lock --upgrade` floats it and the import breaks on torch ABI mismatch.
constraint-dependencies = ["torchaudio==2.7.1"]

[dependency-groups]
dev = ["pytest>=8.0", "black>=26.3.1", "pre-commit>=4.2.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff.lint.per-file-ignores]
# T201 (print): allowed in genuine CLI presenters / tools / scripts, where
# stdout is the intended output. Library code must use bt.logging.
"gas/cache/util/miner_stats.py" = ["T201"]
"gas/protocol/miner_requests.py" = ["T201"]
"neurons/discriminator/push_model.py" = ["T201"]
"neurons/generator/helper/verify_c2pa.py" = ["T201"]
"scripts/**" = ["T201"]
"tests/**" = ["T201"]

[tool.setuptools]
packages = { find = { where = [
    ".",
], exclude = [
    "docs*",
    "wandb*",
    "*.egg-info",
] } }

[tool.setuptools.dynamic]
version = { file = "VERSION" }

